[tool.poetry]
name = "phelng"
version = "0.1.0"
description = "Batch-download music with metadata from Spotify & audio from YouTube, using a .tsv file"
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
phelng = "phelng.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
tabulate = "^0.8.7"
wcwidth = "^0.1.9"
pastel = "^0.2.0"
youtube_dl = "^2020.5.8"
spotipy = "^2.12.0"
yaspin = "^0.17.0"
progressbar = "^2.5"
eyed3 = "^0.9.5"
python-dotenv = "^0.13.0"
pyinquirer = "^1.0.3"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pydeps = "^1.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
